<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <item android:id="@+id/action_import"
            android:title="@string/Import"
            android:icon="@drawable/ic_menu_ptp_holo_light"
            android:showAsAction="always|withText"
            android:visible="false" /> -->
    <!-- Ideally, showAsAction for share_panorama and share should be reversed.
         But, if share_panorama is set to never, it doesn't seem to get promoted
         to the action bar and stays on the overflow menu. -->
    <item android:id="@+id/action_mix_video"
            android:icon="@drawable/ic_menu_mix_holo_light"
            android:title="@string/mix_video"
            android:visible="false"
            android:showAsAction="ifRoom" />
    <item android:id="@+id/action_share_panorama"
            android:icon="@drawable/ic_share"
            android:title="@string/share_panorama"
            android:visible="false"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:showAsAction="ifRoom">
    </item>
    <!--// [ALM][BUGFIX]-Add by TCTNJ,jian.pan1, 2015-11-19,PR942618 Begin -->
    <item android:id="@+id/action_share"
            android:icon="@drawable/ic_share_black"
            android:title="@string/share"
            android:visible="false"
            android:showAsAction="always">
    </item>
    <item android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            android:visible="false"
            android:showAsAction="always" />
    <item android:id="@+id/action_edit"
            android:title="@string/edit"
            android:showAsAction="never"
            android:visible="false" />
    <item
        android:id="@+id/action_move"
        android:showAsAction="never"
        android:title="@string/move_to_album"/>
    <item
        android:id="@+id/action_copy"
        android:showAsAction="never"
        android:title="@string/copy_to_album"/>
    <item
        android:id="@+id/action_collage"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/moments_create_collage"/>
    <item
        android:id="@+id/action_private"
        android:showAsAction="never"
        android:title="@string/set_private" />

    <!--//[BUGFIX]-Add by TCTNJ,su.jiang, 2015-11-26,PR980189 begin -->
    <!-- <item android:id="@+id/action_crop"
            android:title="@string/crop_action"
            android:showAsAction="never"
            android:visible="false" /> -->
    <!--//[BUGFIX]-Add by TCTNJ,su.jiang, 2015-11-26,PR980189 end -->
    <!--//[BUGFIX]-Add by TCTNJ,su.jiang, 2015-12-15,PR1048455 begin -->
    <!-- <item android:id="@+id/action_show_on_map"
            android:title="@string/show_on_map"
            android:showAsAction="never"
            android:visible="false" /> -->
    <!--//[BUGFIX]-Add by TCTNJ,su.jiang, 2015-12-15,PR1048455 end -->
    <item android:id="@+id/action_wifi_display"
            android:title="@string/wfd_show"
            android:showAsAction="never"
            android:visible="false" />
    <item android:id="@+id/action_multi_getcontent"
            android:icon="@drawable/ic_check"
            android:title="@string/ok"
            android:showAsAction="always"
            android:visible="false" />
    <!--// [ALM][BUGFIX]-Add by TCTNJ,jian.pan1, 2015-11-19,PR942618 End -->
</menu>
