<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="20dp"
    android:paddingBottom="15dp" >
    
    <TextView
        android:id="@+id/dialog_burst_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/burst_mode_save_message"
        android:textColor="#757575"
        android:textSize="16sp" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_burst_overwrite"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/burst_overwrite" />

        <Button
            android:id="@+id/button_burst_individual"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:text="@string/burst_save_as_individual_images"
            android:layout_marginTop="40dp" />
    </RelativeLayout>
</LinearLayout>
