<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="98dp"
    android:paddingRight="98dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/img_boom_tip_02" >
    </ImageView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/actionbar_title_color"
        android:textSize="10sp" >
    </TextView>

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tips_tab_moments_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_tab_moments"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/tab_text_selected"
            android:textSize="7sp" />

        <TextView
            android:id="@+id/tips_tab_albums_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/albums"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/tab_text_diselected"
            android:textSize="7sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_tab"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:text="@string/moment_album_today"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/moments_title_date_color"
        android:textSize="7sp"
        android:textStyle="bold" >
    </TextView>

</RelativeLayout>